--- a/index.html
+++ b/index.html
@@ -234,11 +234,6 @@
     <section id="footer">
         <div class="container">
             <div class="row footer_box">
-                <div class="col-md-4 footer_box">
-                    <p>Housing The Future
-
-                    </p>
-                </div>
 
                 <div class="col-md-4 forter_box">
                     <p><b>CONTACT US</b></p>
@@ -254,7 +249,10 @@
                     <button type="button" class="btn btn-primary">subcribe</button>
                 </div>
             </div>
-        </div>
+      </div>
+                <div class="col-md-4 footer_box">
+                   <p>Housing The Future </p>
+                </div>
 
     </section>
 
