--- a/executive.html
+++ b/executive.html
@@ -9,7 +9,7 @@
 <img src="executive house 8.webp"  width="500" height="333">
 <img src="executive house 13.webp" width="500" height="333">
 <img src="executive house 12.webp" width="500" height="333">
-<img src="executive house 9.webp"  width="500" height="333">
+<img src="executive house 4.jpeg"  width="500" height="333">
 
  <!-- footer section -->
 
