--- a/executive.html
+++ b/executive.html
@@ -31,7 +31,7 @@
 
     
     
-   style="background-color:white;">    
+   style="<background-color:black></background-color:black>;">    
 
     <!-- navbar section -->
 
