--- a/executive.html
+++ b/executive.html
@@ -113,13 +113,19 @@
       </nav>
     </section>
 
-    <h2>Executive Houses at affordable prices</h2>
+    <h2>Executive Houses </h2>
     <img src="executive house 3.jpeg" alt="Trulli" width="500" height="333">              
     <img src="executive house 9.webp"  width="500" height="333">
     <img src="executive house 12.webp"  width="500" height="333">
-    <img src="executive house 10.jpg" width="500" height="333">
+    <img src="executive house 7.jpeg" width="500" height="333">
     <img src="executive house 1.jpeg" width="500" height="333">
     <img src="executive house 4.jpeg"  width="500" height="333">
+    <img src="executive house 2.jpeg" alt="Trulli" width="500" height="333">              
+    <img src="executive house 5.webp"  width="500" height="333">
+    <img src="executive house 10.webp"  width="500" height="333">
+    <img src="executive house 8.webp" width="500" height="333">
+    <img src="executive house 11.webp" width="500" height="333">
+    <img src="executive house 13.webp"  width="500" height="333">
 
    <!-- footer section -->
 
