--- a/executive.html
+++ b/executive.html
@@ -120,9 +120,10 @@
     <img src="executive house 7.jpeg" width="500" height="333">
     <img src="executive house 1.jpeg" width="500" height="333">
     <img src="executive house 4.jpeg"  width="500" height="333">
-    <img src="executive house 2.jpeg" alt="Trulli" width="500" height="333">              
-    <img src="executive house 5.webp"  width="500" height="333">
-    <img src="executive house 10.webp"  width="500" height="333">
+
+    <img src="executive house 2.jpeg"  width="500" height="333">              
+    <img src="executive house 5.jpeg"  width="500" height="333">
+    <img src="executive house 10.jpg"  width="500" height="333">
     <img src="executive house 8.webp" width="500" height="333">
     <img src="executive house 11.webp" width="500" height="333">
     <img src="executive house 13.webp"  width="500" height="333">
