--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false"> </a>
                     </li>
-                    
+
                     <div class="dropdown">
                       <button onclick="myFunction()" class="dropbtn">My Work</button>
                       <div id="myDropdown" class="dropdown-content">
@@ -105,7 +105,7 @@
                         <a class="nav-link" href="#">Register</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="http://127.0.0.1:5500/loginform.html">Login</a>
                     </li>
 
                 </ul>
