--- a/signature.html
+++ b/signature.html
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row footer_box">
                 <div class="col-md-4 footer_box">
-                    <p>These are uniq                   </p>
+                    <p>These are unique house designs</p>
                 </div>
 
 
