--- a/loginform.html
+++ b/loginform.html
@@ -124,6 +124,7 @@
 
    <form>
    <div class="mb-3">
+    <div class="col-md-6 forter_box">
     <label for="name" class="form-label">First name</label>
     <input type="password" class="form-text" id="exampleInputPassword1">
     <label for="exampleInputPassword1" class="form-label">Seconnd name</label>
@@ -144,6 +145,7 @@
     <label class="form-check-label" for="exampleCheck1">Check me out</label>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
+</div>
 </form>
 
 
