--- a/loginform.html
+++ b/loginform.html
@@ -137,8 +137,10 @@
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
   </div>
   <div class="mb-3">
+    <div class="col-md-6 forter_box">
     <label for="exampleInputPassword1" class="form-label">Password</label>
     <input type="password" class="form-text" id="exampleInputPassword1">
+    </div>
   </div>
   <div class="mb-3 form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
