--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-linhttp://127.0.0.1:5500/index.htmlk active" aria-current="page" href="">Home</a>
+                        <a class="nav-linhttp://127.0.0.1:5500/index.htmlk active" aria-current="page" href="http://127.0.0.1:5500/index.html">Home</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="/Users/HomePC/Desktop/website%20dmt/location.html" role="button" data-bs-toggle="dropdown" aria-expanded="false"> </a>
